cash-api/src/main/java/com/example/error/ErrorMessage.java
package com.example.error;

public class ErrorMessage {
    public static final String INVALID_VALIDATION = "올바르지 않은 형식입니다";
}
